--- a/src/main/java/HomePage.html
+++ b/src/main/java/HomePage.html
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
+<head>
+    <title>Wicket Budget Start</title>
+</head>
 <body>
 <h1>This is the start</h1>
 </body>
