--- a/src/main/java/be/ghostwritertje/budgetting/wicket/HomePage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/HomePage.html
@@ -19,5 +19,6 @@
 </nav>
 <h1>This is the start</h1>
 <p>Hello, <span wicket:id="userName"></span></p>
+<h3>Let's do some hibernate</h3>
 </body>
 </html>
