--- a/src/main/java/be/ghostwritertje/budgetting/wicket/HomePage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/HomePage.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Wicket Budget Start</title>
 </head>
@@ -18,7 +18,7 @@
     </div>
 </nav>
 <h1>This is the start</h1>
-<p>Hello, <span wicket:id="userName"></span></p>
+<p>Hello, <!--<span wicket:id="userName"></span>--></p>
 <h3>Let's do some hibernate</h3>
 </body>
 </html>
