External mysql server

--- a/src/main/java/be/ghostwritertje/budgetting/wicket/WicketBudgettingPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/WicketBudgettingPage.html
@@ -20,18 +20,7 @@
 
 
 <div class="container">
-    <h1>Overzicht rekeningen</h1>
-    <p>Hello, <span wicket:id="userName"></span></p>
-
-    <div wicket:id="rekeningen" class="panel panel-default">
-        <div wicket:id="naam" class="panel-heading">Panel Heading</div>
-        <div wicket:id="nummer" class="panel-body">Panel Content</div>
-        <div wicket:id="balans" class="panel-body">bedrag</div>
-        <!-- <div wicket:id="statements" class="panel-body">
-             <div wicket:id="bedrag">
-             </div>
-         </div>-->
-    </div>
+    <wicket:child/>
 </div>
 
 </body>
