--- a/src/main/java/be/ghostwritertje/budgetting/wicket/OverzichtPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/OverzichtPage.html
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://www.w3.org/1999/xhtml">
 <body>
 
+<wicket:extend>
+    <h1>Overzicht rekeningen</h1>
+    <p>Hello, <span wicket:id="userName"></span></p>
+    <div wicket:id="rekeningen" class="panel panel-default">
+        <div wicket:id="naam" class="panel-heading">Panel Heading</div>
+        <div wicket:id="nummer" class="panel-body">Panel Content</div>
+        <div wicket:id="balans" class="panel-body">bedrag</div>
+        <!-- <div wicket:id="statements" class="panel-body">
+             <div wicket:id="bedrag">
+             </div>
+         </div>-->
+    </div>
+</wicket:extend>
 </body>
 </html>
