openshift show host

--- a/src/main/java/be/ghostwritertje/budgetting/wicket/WicketBudgettingPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/WicketBudgettingPage.html
@@ -23,5 +23,8 @@
     <wicket:child/>
 </div>
 
+
+<p>Server host: ${OPENSHIFT_MYSQL_DB_HOST}</p>
+<p wicket:id="host">Andere host</p>
 </body>
 </html>
