--- a/src/main/java/be/ghostwritertje/budgetting/wicket/WicketBudgettingPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/WicketBudgettingPage.html
@@ -23,11 +23,10 @@
     <wicket:child/>
 </div>
 
-
-<p>Server host: ${OPENSHIFT_MYSQL_DB_HOST}</p>
+<!--
 <h3>Host: </h3>
 <p wicket:id="host">Andere host</p>
 <h3>Port: </h3>
-<p wicket:id="port">Andere port</p>
+<p wicket:id="port">Andere port</p>-->
 </body>
 </html>
