--- a/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
@@ -33,6 +33,16 @@
         </table>
     </div>
 
+    <div>
+        <div wicket:id="feedback"></div>
+        <form wicket:id="form">
+            <p>
+                <label>Select file :</label>
+                <input wicket:id="fileUpload" size="40" type="file"/>
+                <input type="submit" value="Upload"/>
+            </p>
+        </form>
+    </div>
 </wicket:extend>
 </body>
 </html>
