--- a/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
@@ -9,6 +9,8 @@
             <thead>
             <tr>
                 <th>#</th>
+                <th>Datum</th>
+                <th>Categorie</th>
                 <th>Van rekening</th>
                 <th>Naar rekening</th>
                 <th>Bedrag</th>
@@ -17,6 +19,8 @@
             <tbody>
             <tr wicket:id="statements">
                 <td wicket:id="nummer"></td>
+                <td wicket:id="datum"></td>
+                <td wicket:id="categorie"></td>
                 <td wicket:id="vertrekRekening">Anna</td>
                 <td wicket:id="aankomstRekening">Pitt</td>
                 <td wicket:id="bedrag">1</td>
@@ -24,6 +28,8 @@
             <thead>
             <tr>
                 <th>Totaal</th>
+                <th></th>
+                <th></th>
                 <th></th>
                 <th></th>
                 <th wicket:id="totaal">5000</th>
