--- a/src/main/java/be/ghostwritertje/budgetting/wicket/WicketPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/WicketPage.html
@@ -15,6 +15,10 @@
             <li><a href="#">Page 2</a></li>
             <li><a href="#">Page 3</a></li>
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#"> <span class="glyphicon glyphicon-user"></span> <span wicket:id="username"></span> </a></li>
+            <!--<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>-->
+        </ul>
     </div>
 </nav>
 
