--- a/src/main/java/be/ghostwritertje/budgetting/wicket/OverzichtPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/OverzichtPage.html
@@ -6,7 +6,7 @@
     <h1>Overzicht rekeningen</h1>
     <p>Hello, <span wicket:id="userName"></span></p>
     <div wicket:id="rekeningen" class="panel panel-default">
-        <div wicket:id="naam" class="panel-heading">Panel Heading</div>
+        <div  class="panel-heading"> <a wicket:id="link" href="#"><span wicket:id="naam">Heading</span></a>  </div>
         <div wicket:id="nummer" class="panel-body">Panel Content</div>
         <div wicket:id="balans" class="panel-body">bedrag</div>
         <!-- <div wicket:id="statements" class="panel-body">
