--- a/src/main/java/be/ghostwritertje/budgetting/wicket/WicketPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/WicketPage.html
@@ -11,7 +11,7 @@
         </div>
         <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a wicket:id="rekening" href="#">Rekening</a></li>
+            <li><a href="#">Page 1</a></li>
             <li><a href="#">Page 2</a></li>
             <li><a href="#">Page 3</a></li>
         </ul>
