--- a/src/main/java/be/ghostwritertje/budgetting/wicket/OverzichtPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/OverzichtPage.html
@@ -5,7 +5,8 @@
 <wicket:extend>
     <h1>Overzicht rekeningen</h1>
     <p>Hello, <span wicket:id="userName"></span></p>
-    <div wicket:id="rekeningen" class="panel panel-default">
+    <div class="row">
+    <div wicket:id="rekeningen" class="panel panel-default .col-sm-4">
         <div  class="panel-heading"> <a wicket:id="link" href="#"><span wicket:id="naam">Heading</span></a>  </div>
         <div wicket:id="nummer" class="panel-body">Panel Content</div>
         <div wicket:id="balans" class="panel-body">bedrag</div>
@@ -15,7 +16,8 @@
          </div>-->
     </div>
 
-    <div wicket:id="chart"/>
+    <div class=".col-sm-4" wicket:id="chart"></div>
+    </div>
 </wicket:extend>
 </body>
 </html>
