Goal dao's + domain model + wicket panel

--- a/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
@@ -38,6 +38,7 @@
             </tbody>
         </table>
     </div>
+    <div wicket:id="goalsPanel"></div>
 
     <div>
         <div wicket:id="feedback"></div>
