--- a/src/main/java/be/ghostwritertje/budgetting/wicket/OverzichtPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/OverzichtPage.html
@@ -6,17 +6,18 @@
     <h1>Overzicht rekeningen</h1>
     <p>Hello, <span wicket:id="userName"></span></p>
     <div class="row">
-    <div wicket:id="rekeningen" class="panel panel-default .col-sm-4">
-        <div  class="panel-heading"> <a wicket:id="link" href="#"><span wicket:id="naam">Heading</span></a>  </div>
-        <div wicket:id="nummer" class="panel-body">Panel Content</div>
-        <div wicket:id="balans" class="panel-body">bedrag</div>
-        <!-- <div wicket:id="statements" class="panel-body">
-             <div wicket:id="bedrag">
-             </div>
-         </div>-->
-    </div>
-
-    <div class=".col-sm-4" wicket:id="chart"></div>
+        <div wicket:id="rekeningen" class=".col-sm-4">
+            <div class="panel panel-default">
+                <div class="panel-heading"><a wicket:id="link" href="#"><span wicket:id="naam">Heading</span></a></div>
+                <div wicket:id="nummer" class="panel-body">Panel Content</div>
+                <div wicket:id="balans" class="panel-body">bedrag</div>
+                <!-- <div wicket:id="statements" class="panel-body">
+                     <div wicket:id="bedrag">
+                     </div>
+                 </div>-->
+            </div>
+        </div>
+        <div class=".col-sm-4" wicket:id="chart"></div>
     </div>
 </wicket:extend>
 </body>
