Bedrag negatief correct

--- a/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
@@ -8,27 +8,25 @@
         <table class="table">
             <thead>
             <tr>
-                <th>#</th>
+                <th>Van rekening</th>
                 <th>Datum</th>
                 <th>Categorie</th>
-                <th>Van rekening</th>
+
                 <th>Naar rekening</th>
                 <th>Bedrag</th>
             </tr>
             </thead>
             <tbody>
             <tr wicket:id="statements">
-                <td wicket:id="nummer"></td>
+                <td wicket:id="rekening">Anna</td>
                 <td wicket:id="datum"></td>
                 <td wicket:id="categorie"></td>
-                <td wicket:id="vertrekRekening">Anna</td>
-                <td wicket:id="aankomstRekening">Pitt</td>
+                <td wicket:id="andereRekening">Pitt</td>
                 <td wicket:id="bedrag">1</td>
             </tr>
             <thead>
             <tr>
                 <th>Totaal</th>
-                <th></th>
                 <th></th>
                 <th></th>
                 <th></th>
