--- a/src/main/java/be/ghostwritertje/budgetting/wicket/WicketPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/WicketPage.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://www.w3.org/1999/xhtml">
 <head>
     <title>Wicket Budget Start</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <nav class="navbar navbar-default">
