--- a/src/main/java/be/ghostwritertje/budgetting/wicket/WicketPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/WicketPage.html
@@ -8,18 +8,23 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">WebSiteName</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" wicket:id="Home" href="#">Wicket</a>
         </div>
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Page 1</a></li>
-            <li><a href="#">Page 2</a></li>
-            <li><a href="#">Page 3</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"> <span class="glyphicon glyphicon-user"></span> <span wicket:id="username"></span> </a></li>
-            <!--<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>-->
-        </ul>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li class="active"><a wicket:id="homepage" href="#">Home</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"> <span class="glyphicon glyphicon-user"></span> <span wicket:id="username"></span> </a>
+                </li>
+                <!--<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>-->
+            </ul>
+        </div>
     </div>
 </nav>
 
