Fixed negatief/positief statements

--- a/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
@@ -14,8 +14,8 @@
                         <th>Van rekening</th>
                         <th>Datum</th>
                         <th>Categorie</th>
-                        <th></th>
                         <th>Naar rekening</th>
+                        <th>Goal</th>
                         <th>Bedrag</th>
                     </tr>
                     </thead>
@@ -24,15 +24,15 @@
                         <td wicket:id="rekening">Anna</td>
                         <td wicket:id="datum"></td>
                         <td wicket:id="categorie"></td>
-                        <td>
-                            <form wicket:id="goalOptionForm">
-                                <select wicket:id="goal">
-                                    <option>Optie 1</option>
-
-                                </select>
-                            </form>
-                        </td>
                         <td wicket:id="andereRekening">Pitt</td>
+                        <td>
+                        <form wicket:id="goalOptionForm">
+                            <select wicket:id="goal">
+                                <option>Optie 1</option>
+
+                            </select>
+                        </form>
+                    </td>
                         <td wicket:id="bedrag">1</td>
                     </tr>
                     </tbody>
@@ -42,6 +42,7 @@
                         <th></th>
                         <th></th>
                         <th></th>
+                        <th>    </th>
                         <th wicket:id="totaal">5000</th>
                     </tr>
                     </thead>
