Voeg mededeling toe aan statement

--- a/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
@@ -21,7 +21,7 @@
                     </thead>
                     <tbody>
                     <tr wicket:id="statements">
-                        <td wicket:id="rekening">Anna</td>
+                        <td wicket:id="mededeling">Anna</td>
                         <td wicket:id="datum"></td>
                         <td wicket:id="categorie"></td>
                         <td wicket:id="andereRekening">Pitt</td>
