statement mededeling werkend

--- a/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
@@ -6,12 +6,12 @@
     <h3><span wicket:id="rekeningNaam">Rekening </span> <span wicket:id="balans">500</span> euro</h3>
 
     <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-12">
             <div class="table-responsive">
                 <table class="table">
                     <thead>
                     <tr>
-                        <th>Van rekening</th>
+                        <th>Omschrijving</th>
                         <th>Datum</th>
                         <th>Categorie</th>
                         <th>Naar rekening</th>
