--- a/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
@@ -17,6 +17,7 @@
                         <th>Naar rekening</th>
                         <th>Goal</th>
                         <th>Bedrag</th>
+
                     </tr>
                     </thead>
                     <tbody>
@@ -26,14 +27,28 @@
                         <td wicket:id="categorie"></td>
                         <td wicket:id="andereRekening">Pitt</td>
                         <td>
-                        <form wicket:id="goalOptionForm">
-                            <select wicket:id="goal">
-                                <option>Optie 1</option>
+                            <form wicket:id="goalOptionForm">
+                                <select wicket:id="goal">
+                                    <option>Optie 1</option>
 
-                            </select>
-                        </form>
-                    </td>
+                                </select>
+                            </form>
+                        </td>
                         <td wicket:id="bedrag">1</td>
+
+                    </tr>
+                    <tr>
+                        <form wicket:id="statementForm">
+                            <td><input wicket:id="mededeling"></td>
+                            <td><input type="date" wicket:id="datum"></td>
+                            <td></td>
+                            <td><input wicket:id="aankomstRekening.nummer"></td>
+                            <td></td>
+                            <td><input type="number" wicket:id="bedrag"></td>
+                            <td>
+                                <button>Add</button>
+                            </td>
+                        </form>
                     </tr>
                     </tbody>
                     <thead>
@@ -42,7 +57,7 @@
                         <th></th>
                         <th></th>
                         <th></th>
-                        <th>    </th>
+                        <th></th>
                         <th wicket:id="totaal">5000</th>
                     </tr>
                     </thead>
