--- a/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
+++ b/src/main/java/be/ghostwritertje/budgetting/wicket/RekeningPage.html
@@ -35,7 +35,9 @@
                             </form>
                         </td>
                         <td wicket:id="bedrag">1</td>
-
+                        <td><button class="btn-sm btn-danger">
+                            Remove
+                        </button></td>
                     </tr>
                     <tr>
                         <form wicket:id="statementForm">
@@ -46,7 +48,9 @@
                             <td></td>
                             <td><input type="number" wicket:id="bedrag"></td>
                             <td>
-                                <button>Add</button>
+                                <button class="btn-sm btn-success">
+                                    Add
+                                </button>
                             </td>
                         </form>
                     </tr>
