--- a/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/RekeningPage.html
+++ b/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/RekeningPage.html
@@ -5,73 +5,7 @@
 <wicket:extend>
     <h3><span wicket:id="rekeningNaam">Rekening </span> <span wicket:id="balans">500</span> euro</h3>
 
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="table-responsive">
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>Omschrijving</th>
-                        <th>Datum</th>
-                        <th>Categorie</th>
-                        <th>Naar rekening</th>
-                        <th>Goal</th>
-                        <th>Bedrag</th>
-
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr wicket:id="statements">
-                        <td wicket:id="mededeling">Anna</td>
-                        <td wicket:id="datum"></td>
-                        <td wicket:id="categorie"></td>
-                        <td wicket:id="andereRekening">Pitt</td>
-                        <td>
-                            <form wicket:id="goalOptionForm">
-                                <select wicket:id="goal">
-                                    <option>Optie 1</option>
-
-                                </select>
-                            </form>
-                        </td>
-                        <td wicket:id="bedrag">1</td>
-                        <td><button class="btn-sm btn-danger">
-                            Remove
-                        </button></td>
-                    </tr>
-                    <tr>
-                        <form wicket:id="statementForm">
-                            <td><input wicket:id="mededeling"></td>
-                            <td><input type="date" wicket:id="datum"></td>
-                            <td></td>
-                            <td><input wicket:id="aankomstRekening.nummer"></td>
-                            <td></td>
-                            <td><input type="number" wicket:id="bedrag"></td>
-                            <td>
-                                <button class="btn-sm btn-success">
-                                    Add
-                                </button>
-                            </td>
-                        </form>
-                    </tr>
-                    </tbody>
-                    <thead>
-                    <tr>
-                        <th>Totaal</th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th wicket:id="totaal">5000</th>
-                    </tr>
-                    </thead>
-
-                </table>
-            </div>
-            <ul class="pagination" wicket:id="navigator"></ul>
-
-        </div>
-    </div>
+    <div wicket:id="statementTablePanel"></div>
     <div wicket:id="goalsPanel"></div>
 
     <div class="col-sm-6">
