--- a/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/WicketPage.html
+++ b/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/WicketPage.html
@@ -18,6 +18,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li class="active"><a wicket:id="homepage" href="#">Home</a></li>
+                <li><a wicket:id="inkomsten" href="#">Inkomen</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#"> <span class="glyphicon glyphicon-user"></span> <span wicket:id="username"></span> </a>
