--- a/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/InkomstenPage.html
+++ b/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/InkomstenPage.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
 <wicket:extend>
+    <div wicket:id="chart"></div>
     <div wicket:id="statementTablePanel"></div>
 </wicket:extend>
 </body>
