--- a/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/WicketPage.html
+++ b/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/WicketPage.html
@@ -19,6 +19,8 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a wicket:id="homepage" href="#">Home</a></li>
                 <li><a wicket:id="inkomsten" href="#">Inkomen</a></li>
+                <li><a wicket:id="pensioen" href="#">Pensioenberekening</a></li>
+
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#"> <span class="glyphicon glyphicon-user"></span> <span wicket:id="username"></span> </a>
