--- a/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/PensioenPage.html
+++ b/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/PensioenPage.html
@@ -3,6 +3,19 @@
 <body>
 <wicket:extend>
     <div wicket:id="pensioenChart"></div>
+    <div wicket:id="beleggingsChart"></div>
+
+    <form wicket:id="pensioenForm">
+        <label>Leeftijd:
+            <input type="number" wicket:id="leeftijd">
+        </label>
+        <label>Leeftijd:
+            <input type="number" wicket:id="pensioenFondsRendement">
+        </label>
+        <label>Leeftijd:
+            <input type="number" wicket:id="gewoonFondsRendement">
+        </label>
+    </form>
 </wicket:extend>
 </body>
 </html>
