--- a/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/OverzichtPage.html
+++ b/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/OverzichtPage.html
@@ -34,6 +34,8 @@
             </div>
         </div>
         <div class="col-sm-8" wicket:id="chart"></div>
+        <div class="col-sm-8" wicket:id="otherChart"></div>
+
     </div>
 </wicket:extend>
 </body>
