Doorlopende Statement form

--- a/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/WicketPage.html
+++ b/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/WicketPage.html
@@ -20,6 +20,8 @@
                 <li class="active"><a wicket:id="homepage" href="#">Home</a></li>
                 <li><a wicket:id="inkomsten" href="#">Inkomen</a></li>
                 <li><a wicket:id="pensioen" href="#">Pensioenberekening</a></li>
+                <li><a wicket:id="doorlopendStatement" href="#">Doorlopende transactie</a></li>
+
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
