--- a/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/WicketPage.html
+++ b/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/WicketPage.html
@@ -5,39 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" wicket:id="Home" href="#">Wicket</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-                <li class="active"><a wicket:id="homepage" href="#">Home</a></li>
-                <li><a wicket:id="inkomsten" href="#">Inkomen</a></li>
-                <li><a wicket:id="pensioen" href="#">Pensioenberekening</a></li>
-                <li><a wicket:id="doorlopendStatement" href="#">Doorlopende transactie</a></li>
+<div id="wrapper">
 
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" wicket:id="Home" href="#">Wicket</a>
+    </div>
+    <!-- Top Menu Items -->
+    <ul class="nav navbar-right top-nav">
+        <li><a href="#"> <span class="glyphicon glyphicon-user"></span> <span wicket:id="username">Joran</span> </a>
+        </li>
 
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"> <span class="glyphicon glyphicon-user"></span> <span wicket:id="username"></span> </a>
-                </li>
-                <!--<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>-->
-            </ul>
-        </div>
+    </ul>
+    <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav side-nav">
+            <li class="active"><a wicket:id="homepage" href="#">Home</a></li>
+            <li><a wicket:id="inkomsten" href="#">Inkomen</a></li>
+            <li><a wicket:id="pensioen" href="#">Pensioenberekening</a></li>
+            <li><a wicket:id="doorlopendStatement" href="#">Doorlopende transactie</a></li>
+        </ul>
     </div>
 </nav>
 
-
-<div class="container">
-    <wicket:child/>
+<div id="page-wrapper">
+    <div class="container">
+        <div class="container-fluid">
+            <wicket:child/>
+        </div>
+    </div>
 </div>
-
+</div>
 <!--
 <h3>Host: </h3>
 <p wicket:id="host">Andere host</p>
