--- a/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/WicketPage.html
+++ b/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/WicketPage.html
@@ -29,6 +29,7 @@
             <ul class="nav navbar-nav side-nav">
                 <li class="active"><a wicket:id="homepage" href="#">Home</a></li>
                 <li><a wicket:id="inkomsten" href="#">Inkomen</a></li>
+                <li><a wicket:id="uitgaven" href="#">Uitgaven</a></li>
                 <li><a wicket:id="pensioen" href="#">Pensioenberekening</a></li>
                 <li><a wicket:id="doorlopendStatement" href="#">Doorlopende transactie</a></li>
             </ul>
