--- a/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/UitgavenPage.html
+++ b/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/UitgavenPage.html
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
+<wicket:extend>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            Historiek
+        </div>
+        <div class="panel-body">
+            <div wicket:id="chart"></div>
+        </div>
+    </div>
+</wicket:extend>
 
 </body>
 </html>
