--- a/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/WicketPage.html
+++ b/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/WicketPage.html
@@ -32,6 +32,8 @@
                 <li><a wicket:id="uitgaven" href="#">Uitgaven</a></li>
                 <li><a wicket:id="pensioen" href="#">Pensioenberekening</a></li>
                 <li><a wicket:id="doorlopendStatement" href="#">Doorlopende transactie</a></li>
+                <li><a wicket:id="transactieManager" href="#">Transactie manager</a></li>
+
             </ul>
         </div>
     </nav>
