--- a/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/WicketPage.html
+++ b/src/main/resources/be/ghostwritertje/budgetting/wicket/pages/WicketPage.html
@@ -6,48 +6,10 @@
 </head>
 <body>
 <div id="wrapper">
-
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" wicket:id="Home" href="#">Wicket</a>
-        </div>
-        <!-- Top Menu Items -->
-        <ul class="nav navbar-right top-nav">
-            <li><a href="#"> <span class="glyphicon glyphicon-user"></span> <span wicket:id="username">Joran</span> </a>
-            </li>
-
-        </ul>
-        <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav side-nav">
-                <li class="active"><a wicket:id="homepage" href="#">Home</a></li>
-                <li><a wicket:id="inkomsten" href="#">Inkomen</a></li>
-                <li><a wicket:id="uitgaven" href="#">Uitgaven</a></li>
-                <li><a wicket:id="pensioen" href="#">Pensioenberekening</a></li>
-                <li><a wicket:id="doorlopendStatement" href="#">Doorlopende transactie</a></li>
-                <li><a wicket:id="transactieManager" href="#">Transactie manager</a></li>
-
-            </ul>
-        </div>
-    </nav>
-
-    <div id="page-wrapper">
-        <div class="container-fluid">
-            <wicket:child/>
-        </div>
-    </div>
+<h1>Hello, world!</h1>
 </div>
-<!--
-<h3>Host: </h3>
-<p wicket:id="host">Andere host</p>
-<h3>Port: </h3>
-<p wicket:id="port">Andere port</p>-->
+<wicket:child>
+
+</wicket:child>
 </body>
 </html>
