--- a/src/main/resources/be/estateeleven/pages/WicketPage.html
+++ b/src/main/resources/be/estateeleven/pages/WicketPage.html
@@ -4,6 +4,7 @@
     <title>Wicket Budget Start</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--<link rel="shortcut icon" href="resources/img/favicon.ico" type="image/x-icon">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 </head>
 <body>
 <div class="maincontainer">
