--- a/src/main/resources/be/estateeleven/pages/WicketPage.html
+++ b/src/main/resources/be/estateeleven/pages/WicketPage.html
@@ -40,7 +40,7 @@
                             </div>
                         </div>
                     </div>
-                    <img wicket:id="homeBanner"  alt="Estate Eleven - your idea, your place, your price"
+                    <img wicket:id="homeBanner" alt="Estate Eleven - your idea, your place, your price"
                          title="Estate Eleven - your idea, your place, your price"/>
                 </li>
             </ul>
@@ -129,9 +129,11 @@
             </div>
         </div>
     </header>
-</div>
-<wicket:child>
 
-</wicket:child>
+    <wicket:child>
+
+    </wicket:child>
+    <div wicket:id="footer"></div>
+</div>
 </body>
 </html>
